Add investment service

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,6 @@
     <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
       <app-side-bar></app-side-bar>
     </div>
-    <div class="col py-3">Content area...</div>
+    <div class="col py-3"><router-outlet></router-outlet></div>
   </div>
 </div>
