--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -28,12 +28,12 @@
         data-bs-parent="#menu"
       >
         <li class="w-100">
-          <a href="#" class="nav-link px-0">
+          <a routerLink="/bonds" class="nav-link px-0">
             <span class="d-none d-sm-inline">Obbligazioni</span>
           </a>
         </li>
         <li class="w-100">
-          <a href="#" class="nav-link px-0">
+          <a routerLink="/shares" class="nav-link px-0">
             <span class="d-none d-sm-inline">Azioni</span>
           </a>
         </li>
