--- a/src/app/investments/bond-forecaster/bond-forecaster.component.html
+++ b/src/app/investments/bond-forecaster/bond-forecaster.component.html
@@ -11,7 +11,7 @@
     </form>
   </div>
   <br />
-  <div class="row">
+  <div class="row" ngIf="">
     <div class="col-6">
       <div class="h3">Dati</div>
       <form action="" [formGroup]="formGroup" (submit)="compute()">
@@ -87,9 +87,18 @@
     </div>
     <div class="col-6">
       <h3>Dati derivati</h3>
-      <div><span>Cedola annuale</span><span></span></div>
-      <div><span>Scadenza</span><span></span></div>
-      <div><span>Periodo rimanente</span><span></span></div>
+      <div class="d-flex justify-content-between">
+        <span>Cedola annuale</span>
+        <span>{{ bond?.annualCoupon | percent }}</span>
+      </div>
+      <div class="d-flex justify-content-between">
+        <span>Scadenza</span>
+        <span>{{ bond?.expirationDate | date : "d/M/yyyy" }}</span>
+      </div>
+      <div class="d-flex justify-content-between">
+        <span>Periodo rimanente</span>
+        <span>{{ bond?.remainingPeriod }}</span>
+      </div>
     </div>
   </div>
 </div>
