feat: add salary module

--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -54,8 +54,8 @@
         data-bs-parent="#menu"
       >
         <li class="w-100">
-          <a href="#" class="nav-link px-0">
-            <span class="d-none d-sm-inline">Imposte</span>
+          <a routerLink="/salary" class="nav-link px-0">
+            <span class="d-none d-sm-inline">Stipendio</span>
           </a>
         </li>
         <li class="w-100">
