--- a/src/app/features/tributes/salary/salary.component.html
+++ b/src/app/features/tributes/salary/salary.component.html
@@ -1,1 +1,91 @@
-<p>salary works!</p>
+<div class="row">
+  <div class="col">
+    <form [formGroup]="salaryFormGroup" (submit)="onSubmit()">
+      <div class="row">
+        <mat-form-field appearance="outline">
+          <mat-label>Salary</mat-label>
+          <input
+            matInput
+            class="salary-input"
+            type="number"
+            placeholder="0"
+            min="0"
+            formControlName="grossSalaryFormControl"
+            step="10000"
+            (change)="this.onGrossSalaryChange()"
+          />
+          <span matTextPrefix>&#8364;</span>
+          <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+          <mat-hint>Hint</mat-hint>
+        </mat-form-field>
+      </div>
+      <div class="row">
+        <mat-label>Social Security Contributions Rate</mat-label>
+        <mat-slider>
+          <input
+            matSliderThumb
+            min="0"
+            max="100"
+            step="0.5"
+            formControlName="socialSecurityContributionsFormControl"
+            (change)="onSocialSecurityContributionsSliderChange()"
+          />
+        </mat-slider>
+      </div>
+      <div class="row">
+        <mat-label>Income Taxation Rate</mat-label>
+        <mat-slider>
+          <input
+            matSliderThumb
+            min="0"
+            max="100"
+            step="0.5"
+            formControlName="incomeTaxationRateFormControl"
+            (change)="onIncomeTaxationSliderChange()"
+          />
+        </mat-slider>
+      </div>
+    </form>
+  </div>
+  <div class="col">
+    <h1>Temp</h1>
+    <div class="row">
+      <div class="col">Reddito Annuo Lordo</div>
+      <div class="col"></div>
+      <div class="col">{{ getGrossSalary() | number : "1.2-2" }}</div>
+      <div class="col"></div>
+    </div>
+    <div class="row">
+      <div class="col"></div>
+      <div class="col">Contributi Previdenziali</div>
+      <div class="col"></div>
+      <div class="col">
+        {{ getSocialSecurityContributions() | number : "1.2-2" }} ({{
+          this.getSocialSecurityContributionsRate() | percent : "1.2-2"
+        }})
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">Reddito imponibile</div>
+      <div class="col"></div>
+      <div class="col">{{ getIncomeBeforeTaxation() | number : "1.2-2" }}</div>
+      <div class="col"></div>
+    </div>
+    <div class="row">
+      <div class="col"></div>
+      <div class="col">IRPEF</div>
+      <div class="col"></div>
+      <div class="col">
+        {{ getIncomeTaxation() | number : "1.2-2" }} ({{
+          getIncomeTaxationRate() | percent
+        }})
+      </div>
+    </div>
+    <div class="row">
+      <div class="col"></div>
+      <div class="col">Net Annual Income</div>
+      <div class="col">{{ getIncomeAfterTaxation() | number : "1.2-2" }}</div>
+      <div class="col"></div>
+    </div>
+  </div>
+</div>
