--- a/src/app/features/tributes/salary/salary.component.html
+++ b/src/app/features/tributes/salary/salary.component.html
@@ -41,23 +41,39 @@
         >
       </div>
       <div class="row my-5">
-        <mat-label class="mx-auto">Income Taxation Rate</mat-label>
-        <mat-slider
-          class="mx-auto"
-          [discrete]="true"
-          min="1"
-          max="100"
-          step="1"
-          [displayWith]="formatLabel"
-        >
-          <input
-            formControlName="incomeTaxationRateFormControl"
-            (change)="onIncomeTaxationSliderChange()"
-            matSliderThumb
-          />
-        </mat-slider>
-        <mat-hint>Insert the rate for income tax</mat-hint>
+        <mat-form-field>
+          <mat-label>Strategy</mat-label>
+          <mat-select
+            formControlName="incomeTaxStrategyFormControl"
+            [(ngModel)]="this.selectedIncomeTaxStrategy"
+          >
+            @for (item of incomeTaxStrategyList; track $index) {
+            <mat-option [value]="item">{{ item.name }}</mat-option>
+            }
+          </mat-select>
+        </mat-form-field>
       </div>
+      @if (isItaly2024Selected()) {
+      <div class="row">TEST</div>
+      } @if (isCustomStrategySelected()) {
+      <div class="row my-5">
+        <mat-form-field appearance="outline">
+          <mat-label class="mx-auto">Income Taxation Rate</mat-label>
+          <input
+            matInput
+            class="salary-input"
+            type="number"
+            placeholder="0"
+            min="0"
+            formControlName="incomeTaxationRateFormControl"
+            step="0.1"
+            (change)="onIncomeTaxationSliderChange()"
+          />
+          <span matTextSuffix>&#37;</span>
+          <mat-hint>Insert the rate for income tax</mat-hint>
+        </mat-form-field>
+      </div>
+      }
       <div class="row my-5">
         <mat-form-field appearance="outline">
           <mat-label>Number of payments (per year)</mat-label>
