--- a/src/app/features/tributes/salary/salary.component.scss
+++ b/src/app/features/tributes/salary/salary.component.scss
@@ -1,6 +1,11 @@
 .salary-input {
     text-align: right;
 }
+
+.social-security-contributions-rate-input {
+    text-align: right;
+}
+
 mat-slider {
     width: 80%;
 }
