--- a/src/app/features/tributes/tax-info-card/tax-info-card.component.html
+++ b/src/app/features/tributes/tax-info-card/tax-info-card.component.html
@@ -1,16 +1,23 @@
-<mat-card appearance="outlined">
-  <mat-card-content>
-    <div class="row">
-      <div class="col">
-        <h1>{{ taxInfo.afterTaxationAmount | currency: "EUR" }}</h1>
+<div class="my-3">
+  <mat-card appearance="outlined">
+    <mat-card-content>
+      <div class="row">
+        <div class="col">
+          <div class="row">
+            <h1>
+              {{ taxInfo.afterTaxationAmount | currency: "EUR" }}
+            </h1>
+          </div>
+          <div class="row">Post - Income Tax</div>
+        </div>
+        <div class="col">-{{ taxInfo.taxationRate | percent: "1.2-2" }}</div>
       </div>
-      <div class="col">(- {{ taxInfo.taxationRate | percent: "1.2-2" }})</div>
-    </div>
-    <div class="row">
-      <div class="col">
-        {{ taxInfo.beforeTaxationAmount | currency: "EUR" }} -
-        {{ taxInfo.taxationAmount | currency: "EUR" }}
+      <div class="row">
+        <div class="col">
+          {{ taxInfo.beforeTaxationAmount | currency: "EUR" }} -
+          {{ taxInfo.taxationAmount | currency: "EUR" }}
+        </div>
       </div>
-    </div>
-  </mat-card-content>
-</mat-card>
+    </mat-card-content>
+  </mat-card>
+</div>
