feat: add brackets simulator component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
-<router-outlet></router-outlet>
-<app-home></app-home>
+<div class="full-screen container-fluid ps-0">
+  <div class="row full-screen me-0">
+    <div class="col-2">
+      <app-side-bar></app-side-bar>
+    </div>
+    <div class="col">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
