--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -2,20 +2,22 @@
   <ul class="nav flex-column">
     <li class="nav-item">
       <a class="nav-link active" aria-current="page" routerLink="salary"
-        >Salary simulation</a
+        ><p i18n>side-bar.annual-income-simulation</p></a
       >
     </li>
     <li class="nav-item">
       <a class="nav-link" routerLink="income-tax-simulator"
-        >Income Tax simulation</a
+        ><p i18n>side-bar.income-tax-simulation</p></a
       >
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
+      <a class="nav-link disabled" routerLink=""
+        ><p i18n>side-bar.bond-simulation</p></a
+      >
     </li>
     <li class="nav-item">
       <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"
-        >Disabled</a
+        ><p i18n>side-bar.monthly-salary-simulation</p></a
       >
     </li>
   </ul>
