--- a/src/app/features/tributes/brackets-detail/brackets-detail.component.html
+++ b/src/app/features/tributes/brackets-detail/brackets-detail.component.html
@@ -1,36 +1,42 @@
-@for (item of bracketsAppliedToTaxableIncome; track $index) {
-  <div class="row">
-    <div class="col-3">
-      <span i18n>brackets-detail.name</span> n.{{ $index + 1 }}
+<div class="mt-2">
+  @for (item of bracketsAppliedToTaxableIncome; track $index) {
+    <div class="row">
+      <div class="col-3">
+        <span i18n>brackets-detail.name</span> n.{{ $index + 1 }}
+      </div>
+      <div class="col-2">{{ item.bracket.rate / 100 | percent: "1.2-2" }}</div>
+      <div class="col">
+        @if (item.bracket.upperBoundary) {
+          from {{ item.bracket.lowerBoundary | currency: "EUR" }} to
+          {{ item.bracket.upperBoundary | currency: "EUR" }}
+        } @else {
+          from {{ item.bracket.lowerBoundary | currency: "EUR" }} on
+        }
+      </div>
+      <div class="col-2">
+        @if (item.taxAmount) {
+          {{ item.taxAmount | currency: "EUR" }}
+        } @else {
+          -
+        }
+      </div>
     </div>
-    <div class="col-2">{{ item.bracket.rate / 100 | percent: "1.2-2" }}</div>
-    <div class="col">
-      @if (item.bracket.upperBoundary) {
-        from {{ item.bracket.lowerBoundary | currency: "EUR" }} to
-        {{ item.bracket.upperBoundary | currency: "EUR" }}
-      } @else {
-        from {{ item.bracket.lowerBoundary | currency: "EUR" }} on
-      }
-    </div>
-    <div class="col-2">
-      @if (item.taxAmount) {
-        {{ item.taxAmount | currency: "EUR" }}
-      } @else {
-        -
-      }
-    </div>
-  </div>
-}
-<mat-divider></mat-divider>
-<div class="row">
-  <div class="col-10">
-    <p i18n>brackets-detail.final-income-tax</p>
-  </div>
-  <div class="col-2">{{ finalIncomeTax | currency: "EUR" }}</div>
+  }
 </div>
-<div class="row">
-  <div class="col-10">
-    <p i18n>brackets-detail.percentage-on-taxable-income</p>
+<div class="mt-2 mb-2">
+  <mat-divider></mat-divider>
+</div>
+<div class="mt-2">
+  <div class="row">
+    <div class="col-10">
+      <p i18n>brackets-detail.final-income-tax</p>
+    </div>
+    <div class="col-2">{{ finalIncomeTax | currency: "EUR" }}</div>
   </div>
-  <div class="col-2">{{ taxIncomeOnTaxableIncome | percent: "1.2-2" }}</div>
+  <div class="row">
+    <div class="col-10">
+      <p i18n>brackets-detail.percentage-on-taxable-income</p>
+    </div>
+    <div class="col-2">{{ taxIncomeOnTaxableIncome | percent: "1.2-2" }}</div>
+  </div>
 </div>
