--- a/src/app/features/tributes/income-tax-simulator/income-tax-simulator.component.html
+++ b/src/app/features/tributes/income-tax-simulator/income-tax-simulator.component.html
@@ -1,9 +1,14 @@
 <div class="container-fluid mt-3">
   <div class="row">
+    <h2 i18n>income-tax-simulator.title</h2>
+  </div>
+  <div class="row mt-2">
     <form [formGroup]="formGroup">
       <div class="row">
         <mat-form-field appearance="outline">
-          <mat-label>Taxable amount</mat-label>
+          <mat-label>
+            <p i18n>income-tax-simulator.taxable-income-form-label</p>
+          </mat-label>
           <input
             matInput
             type="number"
@@ -12,12 +17,14 @@
             formControlName="taxableAmountFormController"
             step="1000"
           />
-          <mat-hint>Insert taxable amount</mat-hint>
+          <mat-hint i18n
+            >income-tax-simulator.taxable-income-form-hint</mat-hint
+          >
         </mat-form-field>
       </div>
     </form>
   </div>
-  <div class="row">
+  <div class="row mt-2">
     <app-brackets-detail
       [taxableIncome]="
         this.formGroup.value.taxableAmountFormController
