--- a/src/app/features/tributes/income-tax-simulator/income-tax-simulator.component.html
+++ b/src/app/features/tributes/income-tax-simulator/income-tax-simulator.component.html
@@ -25,6 +25,7 @@
     </form>
   </div>
   <div class="row mt-2">
+    <h4 i18n>income-tax-simulator.brackets-detail</h4>
     <app-brackets-detail
       [taxableIncome]="
         this.formGroup.value.taxableAmountFormController
