feat: add paycheck-table component

--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -11,6 +11,11 @@
       >
     </li>
     <li class="nav-item">
+      <a class="nav-link" routerLink="paychecks"
+        ><p i18n>side-bar.paycheck</p></a
+      >
+    </li>
+    <li class="nav-item">
       <a class="nav-link disabled" routerLink=""
         ><p i18n>side-bar.bond-simulation</p></a
       >
