--- a/src/app/features/paychecks/paycheck-table/paycheck-table.component.html
+++ b/src/app/features/paychecks/paycheck-table/paycheck-table.component.html
@@ -2,24 +2,42 @@
   <ng-container matColumnDef="code">
     <th mat-header-cell *matHeaderCellDef>Code</th>
     <td mat-cell *matCellDef="let element">{{ element.code }}</td>
+    <td mat-footer-cell *matFooterCellDef>Totale Competenze</td>
   </ng-container>
   <ng-container matColumnDef="description">
     <th mat-header-cell *matHeaderCellDef>Description</th>
     <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+    <td mat-footer-cell *matFooterCellDef></td>
   </ng-container>
-  <ng-container matColumnDef="withholdings">
-    <th mat-header-cell *matHeaderCellDef>Trattenute</th>
+  <ng-container matColumnDef="unityValue">
+    <th mat-header-cell *matHeaderCellDef>Valore Unitario</th>
     <td mat-cell *matCellDef="let element">
-      {{ element.withholdings | currency: "EUR" }}
+      {{ element.unityValue | currency: "EUR" }}
     </td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
+  <ng-container matColumnDef="frequency">
+    <th mat-header-cell *matHeaderCellDef>Frequenza</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.frequency }}
+    </td>
+    <td mat-footer-cell *matFooterCellDef></td>
   </ng-container>
   <ng-container matColumnDef="amount">
     <th mat-header-cell *matHeaderCellDef>Importo</th>
     <td mat-cell *matCellDef="let element">
-      {{ element.amount | currency: "EUR" }}
+      @if (element.amount) {
+        {{ element.amount | currency: "EUR" }}
+      } @else {
+        -
+      }
+    </td>
+    <td mat-footer-cell *matFooterCellDef>
+      {{ totalAmount | currency: "EUR" }}
     </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayableColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayableColumns"></tr>
+  <tr mat-footer-row *matFooterRowDef="displayableColumns"></tr>
 </table>
