--- a/src/app/features/paychecks/paychecks-home/paychecks-home.component.html
+++ b/src/app/features/paychecks/paychecks-home/paychecks-home.component.html
@@ -1,2 +1,15 @@
 <p>paychecks-home works!</p>
-<app-paycheck-table></app-paycheck-table>
+<mat-tab-group>
+  <mat-tab label="Marzo 2023">
+    <app-paycheck-table
+      [referenceMonth]="3"
+      [referenceYear]="2023"
+    ></app-paycheck-table>
+  </mat-tab>
+  <mat-tab label="Aprile 2023">
+    <app-paycheck-table
+      [referenceMonth]="4"
+      [referenceYear]="2023"
+    ></app-paycheck-table>
+  </mat-tab>
+</mat-tab-group>
