--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <div class="col-2">
       <app-side-bar></app-side-bar>
     </div>
-    <div class="col">
+    <div class="col-10">
       <router-outlet></router-outlet>
     </div>
   </div>
