--- a/src/app/features/paychecks/paychecks-home/paychecks-home.component.html
+++ b/src/app/features/paychecks/paychecks-home/paychecks-home.component.html
@@ -1,9 +1,13 @@
-<button mat-button (click)="downloadJson()">Download</button>
-<button mat-button>Upload</button>
-<mat-tab-group (selectedIndexChange)="onSelectedIndexChanged($event)">
-  @for (period of paycheckPeriodList; track $index) {
-    <mat-tab label="{{ getMonthName(period.month) }} 2023">
-      <app-paycheck-table [referencePeriod]="period"></app-paycheck-table>
-    </mat-tab>
-  }
-</mat-tab-group>
+<div class="row">
+  <button mat-button (click)="downloadJson()">Download</button>
+  <button mat-button>Upload</button>
+</div>
+<div class="row">
+  <mat-tab-group (selectedIndexChange)="onSelectedIndexChanged($event)">
+    @for (period of paycheckPeriodList; track $index) {
+      <mat-tab label="{{ getMonthName(period.month) }} 2023">
+        <app-paycheck-table [referencePeriod]="period"></app-paycheck-table>
+      </mat-tab>
+    }
+  </mat-tab-group>
+</div>
