--- a/src/app/features/paychecks/paycheck-table/paycheck-table.component.html
+++ b/src/app/features/paychecks/paycheck-table/paycheck-table.component.html
@@ -1,13 +1,14 @@
-<table mat-table [dataSource]="paycheckEntryList" class="mat-elevation-z8">
-  <ng-container matColumnDef="code">
-    <th mat-header-cell *matHeaderCellDef>Code</th>
-    <td mat-cell *matCellDef="let element">{{ element.code }}</td>
-    <td mat-footer-cell *matFooterCellDef>Totale Competenze</td>
-  </ng-container>
+<table
+  mat-table
+  [dataSource]="paycheckEntryList"
+  class="mat-elevation-z8"
+  multiTemplateDataRows=""
+>
   <ng-container matColumnDef="description">
     <th mat-header-cell *matHeaderCellDef>Description</th>
     <td mat-cell *matCellDef="let element">{{ element.description }}</td>
-    <td mat-footer-cell *matFooterCellDef></td>
+    <td mat-footer-cell *matFooterCellDef>Totale Competenze</td>
+    <td mat-footer-cell *matFooterCellDef>Totale Competenze</td>
   </ng-container>
   <ng-container matColumnDef="unityValue">
     <th mat-header-cell *matHeaderCellDef>Valore Unitario</th>
@@ -28,6 +29,8 @@
     <td mat-cell *matCellDef="let element">
       @if (element.amount) {
         {{ element.amount | currency: "EUR" }}
+      } @else if (element.withholdings) {
+        {{ element.withholdings | currency: "EUR" }}
       } @else {
         -
       }
@@ -35,9 +38,42 @@
     <td mat-footer-cell *matFooterCellDef>
       {{ totalAmount | currency: "EUR" }}
     </td>
+    <td mat-footer-cell *matFooterCellDef>
+      {{ totalAmount | currency: "EUR" }}
+    </td>
+  </ng-container>
+  <!-- Secondary Column -->
+  <ng-container matColumnDef="type">
+    <td mat-cell *matCellDef="let element" colspan="4">
+      {{ element.type }}
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="taxableAmount">
+    <td mat-cell *matCellDef="let element">
+      {{ element.taxableAmount | currency: "EUR" }}
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="totalCompensation">
+    <td mat-footer-cell *matFooterCellDef>
+      {{ totalAmount | currency: "EUR" }}
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="totalWithholdings">
+    <td mat-footer-cell *matFooterCellDef>
+      {{ totalAmount | currency: "EUR" }}
+    </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayableColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayableColumns"></tr>
+  <tr
+    mat-row
+    *matRowDef="let row; columns: displayableColumns; when: isCompensationRow"
+  ></tr>
+  <tr
+    mat-row
+    *matRowDef="let row; columns: displayableColumns; when: isWithholdingRow"
+  ></tr>
   <tr mat-footer-row *matFooterRowDef="displayableColumns"></tr>
+  <tr mat-footer-row *matFooterRowDef="['totalCompensation']"></tr>
+  <tr mat-footer-row *matFooterRowDef="['totalWithholdings']"></tr>
 </table>
